<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- Top Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarConfig"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@android:color/white" />


    <!-- Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_temperature_c"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/editMinTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/config_min_temperature_c"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editMaxTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/config_max_temperature_c"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_relative_humidity"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/editMinHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/config_min_humidity"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editMaxHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/config_max_humidity"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_luminosity_lux"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="16dp" />

        <EditText
            android:id="@+id/editMinLuminosity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/config_min_luminosity_lux"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editMaxLuminosity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/config_max_luminosity_lux"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/save_settings" />

    </LinearLayout>
</LinearLayout>
