<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarReadings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@android:color/white" />

    <!-- content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">
        <!-- temp, hum and lum -->
        <TextView
            android:id="@+id/textTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_c"
            android:textSize="18sp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/textHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="18sp"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/textLuminosity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luminosity_lux"
            android:textSize="18sp"
            android:layout_marginBottom="20dp" />

        <!--timestamp date and time-->
        <TextView
            android:id="@+id/textTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestamp"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/btnToggleNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disable_notifications"
            android:padding="8dp"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>
