<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <!-- toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="My App"
        app:titleTextColor="@android:color/white" />

    <!-- main -->
    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <Button
            android:id="@+id/buttonStartReadings"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:text="@string/start_readings"
            android:textSize="20sp"
            android:layout_marginBottom="50dp" />

        <Button
            android:id="@+id/buttonConfigManager"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:text="@string/configurations_manager"
            android:textSize="20sp"
            android:layout_marginBottom="50dp" />

        <Button
            android:id="@+id/buttonAccessRepo"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:text="@string/access_repository"
            android:textSize="20sp"
            android:layout_marginBottom="50dp" />


    </LinearLayout>
</LinearLayout>
